src/objects/Skill__c.object
<CustomObject>
    <fields>
        <fullName>Completion__c</fullName>
        <label>Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsInactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Links__c</fullName>
        <label>Links</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Skill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>